Updated content for Sunday 29 March 2020

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "nativescript": "^6.4.1",
     "ng-block-ui": "^2.1.8",
+    "ng-image-slider": "^2.4.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
