--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "~9.0.5",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "material-components-web": "^5.1.0",
     "nativescript": "^6.4.1",
     "ng-block-ui": "^2.1.8",
     "ng-image-slider": "^2.4.1",
