--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/lazysizes.min.js"
+            ]
           },
           "configurations": {
             "production": {
